check.txt
cargo :     Checking sorosusu-contracts v0.1.0 (C:\Users\odeye\Desktop\My 
Projects\OpensrcIssues\sorosusu-contracts)
At line:1 char:1
+ cargo check --color never 2>&1 | Out-File check.txt -Encoding UTF8
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking so...susu-contracts):String)  
   [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0252]: the name `contract` is defined multiple times
  --> src\lib.rs:80:5
   |
 3 | use soroban_sdk::{contract, contractimpl, contracttype, token, Address, Env};
   |                   -------- previous import of the macro `contract` here
...
80 |     contract, contracterror, contractimpl, contractmeta, symbol_short, token, 
Address, Env, Map, Symbol, Vec,
   |     ^^^^^^^^--
   |     |
   |     `contract` reimported here
   |     help: remove unnecessary import
   |
   = note: `contract` must be defined only once in the macro namespace of this module

error[E0252]: the name `contractimpl` is defined multiple times
  --> src\lib.rs:80:30
   |
 3 | use soroban_sdk::{contract, contractimpl, contracttype, token, Address, Env};
   |                             ------------ previous import of the macro 
`contractimpl` here
...
80 |     contract, contracterror, contractimpl, contractmeta, symbol_short, token, 
Address, Env, Map, Symbol, Vec,
   |                              ^^^^^^^^^^^^--
   |                              |
   |                              `contractimpl` reimported here
   |                              help: remove unnecessary import
   |
   = note: `contractimpl` must be defined only once in the macro namespace of this 
module

error[E0252]: the name `token` is defined multiple times
  --> src\lib.rs:80:72
   |
 3 | use soroban_sdk::{contract, contractimpl, contracttype, token, Address, Env};
   |                                                         ----- previous import of 
the module `token` here
...
80 |     contract, contracterror, contractimpl, contractmeta, symbol_short, token, 
Address, Env, Map, Symbol, Vec,
   |                                                                        ^^^^^--
   |                                                                        |
   |                                                                        `token` 
reimported here
   |                                                                        help: 
remove unnecessary import
   |
   = note: `token` must be defined only once in the type namespace of this module

error[E0252]: the name `Address` is defined multiple times
  --> src\lib.rs:80:79
   |
 3 | use soroban_sdk::{contract, contractimpl, contracttype, token, Address, Env};
   |                                                                ------- previous 
import of the type `Address` here
...
80 |     contract, contracterror, contractimpl, contractmeta, symbol_short, token, 
Address, Env, Map, Symbol, Vec,
   |                                                                               
^^^^^^^--
   |                                                                               |
   |                                                                               
`Address` reimported here
   |                                                                               
help: remove unnecessary import
   |
   = note: `Address` must be defined only once in the type namespace of this module

error[E0252]: the name `Env` is defined multiple times
  --> src\lib.rs:80:88
   |
 3 | use soroban_sdk::{contract, contractimpl, contracttype, token, Address, Env};
   |                                                                         --- 
previous import of the type `Env` here
...
80 |     contract, contracterror, contractimpl, contractmeta, symbol_short, token, 
Address, Env, Map, Symbol, Vec,
   |                                                                                    
    ^^^--
   |                                                                                    
    |
   |                                                                                    
    `Env` reimported here
   |                                                                                    
    help: remove unnecessary import
   |
   = note: `Env` must be defined only once in the type namespace of this module

error[E0428]: the name `__initialize` is defined multiple times
   --> src\lib.rs:112:1
    |
 18 | #[contractimpl]
    | --------------- previous definition of the module `__initialize` here
...
112 | #[contractimpl]
    | ^^^^^^^^^^^^^^^ `__initialize` redefined here
    |
    = note: `__initialize` must be defined only once in the type namespace of this 
module
    = note: this error originates in the attribute macro `contractimpl` (in Nightly 
builds, run with -Z macro-backtrace for more info)

error[E0428]: the name `__SPEC_XDR_FN_INITIALIZE` is defined multiple times
   --> src\lib.rs:112:1
    |
 18 | #[contractimpl]
    | --------------- previous definition of the value `__SPEC_XDR_FN_INITIALIZE` here
...
112 | #[contractimpl]
    | ^^^^^^^^^^^^^^^ `__SPEC_XDR_FN_INITIALIZE` redefined here
    |
    = note: `__SPEC_XDR_FN_INITIALIZE` must be defined only once in the value namespace 
of this module
    = note: this error originates in the attribute macro `soroban_sdk::contractspecfn` 
(in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Address`, `Env`, `contract`, `contractimpl`, and `token`
  --> src\lib.rs:80:5
   |
80 |     contract, contracterror, contractimpl, contractmeta, symbol_short, token, 
Address, Env, Map, Symbol, Vec,
   |     ^^^^^^^^                 ^^^^^^^^^^^^                              ^^^^^  
^^^^^^^  ^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0252, E0428.
For more information about an error, try `rustc --explain E0252`.
warning: `sorosusu-contracts` (lib) generated 1 warning
error: could not compile `sorosusu-contracts` (lib) due to 7 previous errors; 1 warning 
emitted
